--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,5 @@ language: go
 go: 1.2
 install: go get -t -v ./...
 before_install:
+ - sudo apt-get update -qq
  - sudo apt-get install -qq libraptor2-dev libmagic-dev
