--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,12 @@ install: go get -t -v ./...
 before_install:
  - sudo apt-get update -qq
  - sudo apt-get install -qq libraptor2-dev libmagic-dev
+
+notifications:
+  webhooks:
+    urls:
+      - https://webhooks.gitter.im/e/436c5c3b940207e4a069
+    on_success: change  # options: [always|never|change] default: always
+    on_failure: always  # options: [always|never|change] default: always
+    on_start: false     # default: false
+
