--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,13 @@
 language: go
 go: 1.5.1
 install: go get -t -v ./...
-before_install:
- - sudo apt-get update -qq
- - sudo apt-get install -qq libraptor2-dev libmagic-dev
+sudo: false
+
+addons:
+  apt:
+    packages:
+    - libraptor2-dev
+    - libmagic-dev
 
 notifications:
   webhooks:
